chore(Root): Add files to ignore from git repository

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "co": "sui-mono co",
+    "co": "sui-mono commit",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
